= New Features =

== 1.15 release (in-progress) == #release-1.15

=== Library ===

==== Major changes ====

==== New classes ====

==== API changes ====
 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===


== 1.14rc1 release (2019-10-23) == #release-1.14rc1

=== Library ===

==== IMPORTANT: Distributions parametrization changes ====
 * New argument ordering in Frechet ctor: scale(beta), shape(alpha), location(gamma) (swapped alpha and beta)
 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
 * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
 * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)
 * New parametrization in InverseNormal: location(mu), rate(lambda) (swapped arguments)
 * New parametrization in Laplace: mean(mu), rate(lambda) (swapped arguments)
 => One can use "import openturns.shims as ot" to maintain compatibility with older scripts

==== Major changes ====
 * New optimization solvers (Dlib, Bonmin for mixed integer optimization problems)
 * New distributions (SquaredNormal, WeibullMax, Pareto, DiscreteCompoundDistribution)
 * New estimators (ParetoFactory, GeneralizedExtremeValueFactory, LeastSquaresDistributionFactory)
 * New copulas (JoeCopula, MarshallOlkinCopula)
 * Linear model learner (LinearModelStepwiseAlgorithm)
 * System events (IntersectionEvent, UnionEvent, SystemFORM, MultiFORM)

==== New classes ====
 * Dlib
 * SquaredNormal
 * NullHessian
 * GumbelLambdaGamma
 * LogNormalMuErrorFactor
 * WeibullMax
 * WeibullMaxFactory
 * WeibullMaxMuSigma
 * GeneralizedExtremeValueFactory
 * Pareto
 * LeastSquaresDistributionFactory
 * ParetoFactory
 * DiscreteCompoundDistribution
 * Bonmin
 * IntersectionEvent
 * UnionEvent
 * SystemFORM
 * MultiFORM
 * JoeCopula
 * MarginalEvaluation/Gradient/Hessian
 * MarshallOlkinCopula