@@ -65,10 +65,6 @@ public:
   OptimizationAlgorithm getOptimizationAlgorithm() const;
   void setOptimizationAlgorithm(const OptimizationAlgorithm & algorithm);
 
-  /** @deprecated */
-  OptimizationAlgorithm getAlgorithm() const;
-  void setAlgorithm(const OptimizationAlgorithm & algorithm);
-
   /** Candidate accessor */
   Point getCandidate() const;
 
